# Unscramble

./: .gitignore  README.md
client/: index.html
client/src/: Main.elm
server/: Cargo.toml
server/src/: main.rs
